--- a/index.html
+++ b/index.html
@@ -9,7 +9,24 @@
         <title>Architekturmalerei Weubel</title>
     </head>
     <body>
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-center">
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                  </button>                
+                <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-item nav-link active" href="#">Startseite</a>
+                        <a class="nav-item nav-link" href="#">Landschaften</a>
+                        <a class="nav-item nav-link" href="#">Städte</a>
+                        <a class="nav-item nav-link" href="#">Gebäude</a>
+                    </div>
+                </div>
+            </nav>
+        </header>
+        <main>
 
+        </main>
     </body>
     <footer>
 
