--- a/index.html
+++ b/index.html
@@ -10,18 +10,21 @@
     </head>
     <body>
         <header>
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark justify-content-center">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <div class="container-fluid justify-content-center">
+                    <a class="navbar-brand" href="#">Navbar</a>
+                <button class="navbar-toggler flex-row" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>                
-                <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
-                    <div class="navbar-nav">
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <div class="navbar-nav align-items-center">
                         <a class="nav-item nav-link active" href="#">Startseite</a>
                         <a class="nav-item nav-link" href="#">Landschaften</a>
                         <a class="nav-item nav-link" href="#">Städte</a>
                         <a class="nav-item nav-link" href="#">Gebäude</a>
                     </div>
                 </div>
+              </div>
             </nav>
         </header>
         <main>
