Add autoplaying carousel

--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
             </nav>
         </header>
         <main>
-            <div id="home-carousel" class="carousel slide">
+            <div id="home-carousel" class="carousel slide" data-bs-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="..." class="d-block w-100" alt="...">
+                        <img src="images/Gutshof In Groß Machnow, Acryl auf Leinwand.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
+                        <img src="images/Ev. Kirche Berlin-Köpenick ,Aquarell.jpg" class="d-block w-100" alt="...">
                     </div>
                     <div class="carousel-item">
-                        <img src="..." class="d-block w-100" alt="...">
+                        <img src="images/Fabrik in Köpenick, Acryl auf Leinwand.jpg" class="d-block w-100" alt="...">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#home-carousel" data-bs-slide="prev">
