--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         <header>
             <nav class="navbar navbar-expand-sm navbar-dark">
                 <div class="container-fluid justify-content-center">
-                    <a class="navbar-brand" href="#">Navbar</a>
+                    <a class="navbar-brand fw-bold" href="#">Navbar</a>
                 <button class="navbar-toggler flex-row" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>                
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <div class="navbar-nav align-items-center">
-                        <a class="nav-item nav-link active" href="#">Startseite</a>
-                        <a class="nav-item nav-link" href="#">Landschaften</a>
-                        <a class="nav-item nav-link" href="#">Städte</a>
-                        <a class="nav-item nav-link" href="#">Gebäude</a>
+                        <a class="nav-item nav-link fw-bold active" href="#">Startseite</a>
+                        <a class="nav-item nav-link fw-bold" href="#">Landschaften</a>
+                        <a class="nav-item nav-link fw-bold" href="#">Städte</a>
+                        <a class="nav-item nav-link fw-bold" href="#">Gebäude</a>
                     </div>
                 </div>
               </div>
