--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     <span class="navbar-toggler-icon"></span>
                   </button>                
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <div class="navbar-nav align-items-center">
+                    <div class="navbar-nav ms-auto align-items-center">
                         <a class="nav-item nav-link fw-bold active" href="#">Startseite</a>
                         <a class="nav-item nav-link fw-bold" href="#">Landschaften</a>
                         <a class="nav-item nav-link fw-bold" href="#">Städte</a>
