Adjust carousel as hero and change navbar headings

--- a/index.html
+++ b/index.html
@@ -19,15 +19,26 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <div class="navbar-nav ms-auto align-items-center">
                         <a class="nav-item nav-link fw-bold active" href="#">Startseite</a>
-                        <a class="nav-item nav-link fw-bold" href="#">Landschaften</a>
-                        <a class="nav-item nav-link fw-bold" href="#">Städte</a>
-                        <a class="nav-item nav-link fw-bold" href="#">Gebäude</a>
+                        <a class="nav-item nav-link fw-bold" href="#">Galerie</a>
+                        <a class="nav-item nav-link fw-bold" href="#">Über mich</a>
+                        <a class="nav-item nav-link fw-bold" href="#">Kontakt</a>
                     </div>
                 </div>
               </div>
             </nav>
         </header>
         <main>
+            <div class="carousel slide h-50">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img src="images/villa-koerfer.jpg" class="d-block w-100 opacity-50" alt="Villa Körfer">
+                        <div class="carousel-caption d-block">
+                            <h1 class="fw-bold font-monospace mb-5">Architekturmalerei Weubel</h1>
+                            <button class="btn btn-light mt-5">Kontakt aufnehmen</button>
+                          </div>                    
+                    </div>
+                </div>
+            </div>
         </main>
     </body>
     <footer>
