--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <header>
             <nav class="navbar navbar-expand-sm navbar-dark">
                 <div class="container-fluid justify-content-center">
-                    <a class="navbar-brand fw-bold" href="#">Navbar</a>
+                    <a class="navbar-brand fw-bold" href="#">Ulrich Weubel</a>
                 <button class="navbar-toggler flex-row" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>                
