--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
     </head>
     <body class="bg-dark">
         <header>
+            <div class="d-flex justify-content-center align-items-center flex-column">
+                <h1 class="my-2 fw-light text-light">Ulrich Weubel</h1>
+                <p class="fw-light text-light">Architekturmalerei</p>
+            </div>
             <nav class="navbar navbar-expand-sm navbar-dark">
                 <div class="container-fluid justify-content-center">
-                    <a class="navbar-brand fw-bold" href="#">Ulrich Weubel</a>
                 <button class="navbar-toggler flex-row" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                   </button>                
