--- a/index.html
+++ b/index.html
@@ -10,25 +10,40 @@
     </head>
     <body class="bg-dark">
         <header>
-            <div class="d-flex justify-content-center align-items-center flex-column">
-                <h1 class="my-2 fw-light text-light">Ulrich Weubel</h1>
+            <div class="d-flex mb-3 justify-content-center align-items-center flex-column">
+                <h1 class="mt-3 fw-light text-light">Ulrich Weubel</h1>
                 <p class="fw-light text-light">Architekturmalerei</p>
             </div>
-            <nav class="navbar navbar-expand-sm navbar-dark">
+            <nav class="navbar navbar-expand-lg navbar-dark">
                 <div class="container-fluid justify-content-center">
-                <button class="navbar-toggler flex-row" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
-                  </button>                
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <div class="navbar-nav ms-auto align-items-center">
-                        <a class="nav-item nav-link fw-bold active" href="#">Startseite</a>
-                        <a class="nav-item nav-link fw-bold" href="#">Galerie</a>
-                        <a class="nav-item nav-link fw-bold" href="#">Über mich</a>
-                        <a class="nav-item nav-link fw-bold" href="#">Kontakt</a>
-                    </div>
+                  </button>
+                  <div class="collapse navbar-collapse justify-content-center align-items-center" id="navbarNavDropdown">
+                    <ul class="navbar-nav align-items-center ">
+                      <li class="nav-item px-2">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                      </li>
+                      <li class="nav-item px-2">
+                        <a class="nav-link" href="#">Über mich</a>
+                      </li>
+                      <li class="nav-item px-2 dropdown d-flex flex-column justify-content-center align-items-center">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                          Galerie
+                        </a>
+                        <ul class="dropdown-menu position-absolute dropdown-menu-dark">
+                          <li><a class="dropdown-item" href="#">Städte</a></li>
+                          <li><a class="dropdown-item" href="#">Landschaften</a></li>
+                          <li><a class="dropdown-item" href="#">Gebäude</a></li>
+                        </ul>
+                      </li>
+                      <li class="nav-item px-2">
+                        <a class="nav-link" href="#">Kontakt</a>
+                      </li>
+                    </ul>
+                  </div>
                 </div>
-              </div>
-            </nav>
+              </nav>
         </header>
         <main>
             <div class="carousel slide h-50">
