--- a/index.html
+++ b/index.html
@@ -1,65 +1,67 @@
 <!DOCTYPE html>
 <html lang="de">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
-        <link rel="stylesheet" href="styles.css">
-        <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" defer></script>
-        <title>Architekturmalerei Weubel</title>
-    </head>
-    <body class="bg-dark">
-        <header>
-            <div class="d-flex mb-3 justify-content-center align-items-center flex-column">
-                <h1 class="mt-3 fw-light text-light">Ulrich Weubel</h1>
-                <p class="fw-light text-light">Architekturmalerei</p>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="styles.css">
+    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" defer></script>
+    <title>Architekturmalerei Weubel</title>
+  </head>
+  <body class="bg-dark">
+    <header>
+      <div class="d-flex mb-3 justify-content-center align-items-center flex-column">
+        <h1 class="mt-3 fw-light text-light">Ulrich Weubel</h1>
+        <p class="fw-light text-light">Architekturmalerei</p>
+      </div>
+      <nav class="navbar navbar-expand-lg navbar-dark">
+        <div class="container-fluid justify-content-center">
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse justify-content-center align-items-center" id="navbarNavDropdown">
+            <ul class="navbar-nav align-items-center ">
+              <li class="nav-item px-2">
+                <a class="nav-link active" aria-current="page" href="#"> Home </a>
+              </li>
+              <li class="nav-item px-2">
+                <a class="nav-link" href="#">Über mich</a>
+              </li>
+              <li class="nav-item px-2 dropdown d-flex flex-column justify-content-center align-items-center">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Galerie </a>
+                <ul class="dropdown-menu position-absolute dropdown-menu-dark">
+                  <li>
+                    <a class="dropdown-item" href="#">Städte</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#">Landschaften</a>
+                  </li>
+                  <li>
+                    <a class="dropdown-item" href="#">Gebäude</a>
+                  </li>
+                </ul>
+              </li>
+              <li class="nav-item px-2">
+                <a class="nav-link" href="#">Kontakt</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+    </header>
+    <main>
+      <div class="carousel slide h-50">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="images/villa-koerfer.jpg" class="d-block w-100 opacity-50" alt="Villa Körfer">
+            <div class="carousel-caption d-block">
+              <h1 class="fw-bold font-monospace mb-5">Architekturmalerei Weubel</h1>
+              <button class="btn btn-light mt-5">Kontakt aufnehmen</button>
             </div>
-            <nav class="navbar navbar-expand-lg navbar-dark">
-                <div class="container-fluid justify-content-center">
-                  <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                  </button>
-                  <div class="collapse navbar-collapse justify-content-center align-items-center" id="navbarNavDropdown">
-                    <ul class="navbar-nav align-items-center ">
-                      <li class="nav-item px-2">
-                        <a class="nav-link active" aria-current="page" href="#">Home</a>
-                      </li>
-                      <li class="nav-item px-2">
-                        <a class="nav-link" href="#">Über mich</a>
-                      </li>
-                      <li class="nav-item px-2 dropdown d-flex flex-column justify-content-center align-items-center">
-                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                          Galerie
-                        </a>
-                        <ul class="dropdown-menu position-absolute dropdown-menu-dark">
-                          <li><a class="dropdown-item" href="#">Städte</a></li>
-                          <li><a class="dropdown-item" href="#">Landschaften</a></li>
-                          <li><a class="dropdown-item" href="#">Gebäude</a></li>
-                        </ul>
-                      </li>
-                      <li class="nav-item px-2">
-                        <a class="nav-link" href="#">Kontakt</a>
-                      </li>
-                    </ul>
-                  </div>
-                </div>
-              </nav>
-        </header>
-        <main>
-            <div class="carousel slide h-50">
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="images/villa-koerfer.jpg" class="d-block w-100 opacity-50" alt="Villa Körfer">
-                        <div class="carousel-caption d-block">
-                            <h1 class="fw-bold font-monospace mb-5">Architekturmalerei Weubel</h1>
-                            <button class="btn btn-light mt-5">Kontakt aufnehmen</button>
-                          </div>                    
-                    </div>
-                </div>
-            </div>
-        </main>
-    </body>
-    <footer>
-
-    </footer>
+          </div>
+        </div>
+      </div>
+    </main>
+  </body>
+  <footer></footer>
 </html>
