--- a/index.html
+++ b/index.html
@@ -50,15 +50,31 @@
       </nav>
     </header>
     <main>
-      <div class="carousel slide h-50">
+      <div class="carousel slide h-50" id="home-carousel">
+        <div class="carousel-indicators">
+            <button type="button" data-bs-target="#home-carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <button type="button" data-bs-target="#home-carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
+            <button type="button" data-bs-target="#home-carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            <button type="button" data-bs-target="#home-carousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#home-carousel" data-bs-slide-to="4" aria-label="Slide 5"></button>
+          </div>        
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="images/villa-koerfer.jpg" class="d-block w-100 opacity-50" alt="Villa Körfer">
-            <div class="carousel-caption d-block">
-              <h1 class="fw-bold font-monospace mb-5">Architekturmalerei Weubel</h1>
-              <button class="btn btn-light mt-5">Kontakt aufnehmen</button>
-            </div>
+            <img src="images/villa-koerfer.jpg" class="d-block w-100 opacity-75" alt="Villa Körfer">
           </div>
+          <div class="carousel-item">
+            <img src="images/Gutshof In Groß Machnow, Acryl auf Leinwand.jpg" class="d-block w-100 opacity-75" alt="Villa Körfer">
+          </div>
+          <div class="carousel-item">
+            <img src="images/Kirche in Meinerzhagen-Sauerland, Acryl auf Karton.jpg" class="d-block w-100 opacity-75" alt="Villa Körfer">
+          </div>
+          <div class="carousel-item">
+            <img src="images/Dom zu Worms, Feder ,Aquarell.jpg" class="d-block w-100 opacity-75" alt="Villa Körfer">
+          </div>
+          <div class="carousel-item">
+            <img src="images/Heym Gartens,.jpg" class="d-block w-100 opacity-75" alt="Villa Körfer">
+          </div>
+
         </div>
       </div>
     </main>
