--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </nav>
     </header>
     <main>
-      <div class="carousel slide h-50" id="home-carousel">
+      <div class="carousel slide" id="home-carousel">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#home-carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#home-carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -66,10 +66,10 @@
             <img src="images/Gutshof In Groß Machnow, Acryl auf Leinwand.jpg" class="d-block w-100 opacity-75" alt="Villa Körfer">
           </div>
           <div class="carousel-item">
-            <img src="images/Kirche in Meinerzhagen-Sauerland, Acryl auf Karton.jpg" class="d-block w-100 opacity-75" alt="Villa Körfer">
+            <img src="images/Steg in Caputh, Acryl auf Leinwand.jpg" class="d-block w-100 opacity-75" alt="Villa Körfer">
           </div>
           <div class="carousel-item">
-            <img src="images/Dom zu Worms, Feder ,Aquarell.jpg" class="d-block w-100 opacity-75" alt="Villa Körfer">
+            <img src="images/Wohnhaus in Berlin-Marienfelde, Feder, Acrylstift.jpg" class="d-block w-100 opacity-75" alt="Villa Körfer">
           </div>
           <div class="carousel-item">
             <img src="images/Heym Gartens,.jpg" class="d-block w-100 opacity-75" alt="Villa Körfer">
