--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   </head>
   <body class="bg-dark">
     <header>
-      <div class="d-flex mb-3 justify-content-center align-items-center flex-column">
-        <h1 class="mt-3 fw-light text-light">Ulrich Weubel</h1>
+      <div class="d-flex justify-content-center align-items-center flex-column">
+        <h1 class="fw-light text-light">Ulrich Weubel</h1>
         <p class="fw-light text-light">Architekturmalerei</p>
       </div>
       <nav class="navbar navbar-expand-lg navbar-dark">
