--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300&display=swap" rel="stylesheet">
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" defer></script>
     <title>Architekturmalerei Weubel</title>
   </head>
-  <body class="bg-dark">
+  <body class="bg-dark" style="font-family: 'Quicksand';">
     <header>
       <div class="d-flex justify-content-center align-items-center flex-column">
         <h1 class="fw-light text-light">Ulrich Weubel</h1>
