--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body class="bg-dark" style="font-family: 'Quicksand';">
     <header>
       <div class="d-flex justify-content-center align-items-center flex-column">
-        <h1 class="fw-light text-light">Ulrich Weubel</h1>
+        <h1 class="fw-light mt-2 text-light">Ulrich Weubel</h1>
         <p class="fw-light text-light">Architekturmalerei</p>
       </div>
       <nav class="navbar navbar-expand-lg navbar-dark">
