--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           <div class="collapse navbar-collapse justify-content-center align-items-center" id="navbarNavDropdown">
             <ul class="navbar-nav align-items-center ">
               <li class="nav-item px-2">
-                <a class="nav-link active" aria-current="page" href="#"> Home </a>
+                <a class="nav-link active border-bottom" aria-current="page" href="#"> Home </a>
               </li>
               <li class="nav-item px-2">
                 <a class="nav-link" href="#">Über mich</a>
