--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
               <li class="nav-item px-2">
                 <a class="nav-link active border-bottom" aria-current="page" href="#"> Home </a>
               </li>
-              <li class="nav-item px-2">
+              <li class="nav-item ps-2">
                 <a class="nav-link" href="#">Über mich</a>
               </li>
-              <li class="nav-item px-2 dropdown d-flex flex-column justify-content-center align-items-center">
+              <li class="nav-item ps-2 dropdown d-flex flex-column justify-content-center align-items-center">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Galerie </a>
                 <ul class="dropdown-menu position-absolute dropdown-menu-dark">
                   <li>
