Add letter spacing to header

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
   <body class="bg-dark" style="font-family: 'Quicksand';">
     <header>
       <div class="d-flex justify-content-center align-items-center flex-column">
-        <h1 class="fw-light mt-2 text-light">Ulrich Weubel</h1>
-        <p class="fw-light text-light">Architekturmalerei</p>
+        <h1 class="fw-light mt-2 text-light" style="letter-spacing: 0.5vw;">Ulrich Weubel</h1>
+        <p class="fw-light text-light" style="letter-spacing: 0.25vw;">Architekturmalerei</p>
       </div>
       <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid justify-content-center">
