--- a/about.html
+++ b/about.html
@@ -25,10 +25,10 @@
           <div class="collapse navbar-collapse justify-content-center align-items-center" id="navbarNavDropdown">
             <ul class="navbar-nav align-items-center ">
               <li class="nav-item px-2">
-                <a class="nav-link active border-bottom" aria-current="page" href="#"> Home </a>
+                <a class="nav-link" href="index.html"> Home </a>
               </li>
               <li class="nav-item ps-2">
-                <a class="nav-link" href="about.html">Über mich</a>
+                <a class="nav-link active border-bottom" href="about.html" aria-current="page">Über mich</a>
               </li>
               <li class="nav-item ps-2 dropdown d-flex flex-column justify-content-center align-items-center">
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Galerie </a>
@@ -53,33 +53,6 @@
       </nav>
     </header>
     <main>
-      <div class="carousel slide" id="home-carousel">
-        <div class="carousel-indicators">
-            <button type="button" data-bs-target="#home-carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#home-carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#home-carousel" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            <button type="button" data-bs-target="#home-carousel" data-bs-slide-to="3" aria-label="Slide 4"></button>
-            <button type="button" data-bs-target="#home-carousel" data-bs-slide-to="4" aria-label="Slide 5"></button>
-          </div>        
-        <div class="carousel-inner">
-          <div class="carousel-item active">
-            <img src="images/villa-koerfer.jpg" class="d-block w-100 opacity-75" alt="Villa Körfer">
-          </div>
-          <div class="carousel-item">
-            <img src="images/Gutshof In Groß Machnow, Acryl auf Leinwand.jpg" class="d-block w-100 opacity-75" alt="Villa Körfer">
-          </div>
-          <div class="carousel-item">
-            <img src="images/Steg in Caputh, Acryl auf Leinwand.jpg" class="d-block w-100 opacity-75" alt="Villa Körfer">
-          </div>
-          <div class="carousel-item">
-            <img src="images/Wohnhaus in Berlin-Marienfelde, Feder, Acrylstift.jpg" class="d-block w-100 opacity-75" alt="Villa Körfer">
-          </div>
-          <div class="carousel-item">
-            <img src="images/Heym Gartens,.jpg" class="d-block w-100 opacity-75" alt="Villa Körfer">
-          </div>
-
-        </div>
-      </div>
     </main>
   </body>
   <footer></footer>
