Add other sub webpages

--- a/about.html
+++ b/about.html
@@ -34,18 +34,18 @@
                 <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Galerie </a>
                 <ul class="dropdown-menu position-absolute dropdown-menu-dark">
                   <li>
-                    <a class="dropdown-item" href="#">Städte</a>
+                    <a class="dropdown-item" href="cities.html">Städte</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#">Landschaften</a>
+                    <a class="dropdown-item" href="landscapes.html">Landschaften</a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#">Gebäude</a>
+                    <a class="dropdown-item" href="buildings.html">Gebäude</a>
                   </li>
                 </ul>
               </li>
               <li class="nav-item px-2">
-                <a class="nav-link" href="#">Kontakt</a>
+                <a class="nav-link" href="contact.html">Kontakt</a>
               </li>
             </ul>
           </div>
