--- a/landscapes.html
+++ b/landscapes.html
@@ -25,13 +25,13 @@
           <div class="collapse navbar-collapse justify-content-center align-items-center" id="navbarNavDropdown">
             <ul class="navbar-nav align-items-center ">
               <li class="nav-item px-2">
-                <a class="nav-link" href="index.html"> Home </a>
+                <a class="nav-link pb-0" href="index.html"> Home </a>
               </li>
               <li class="nav-item ps-2">
-                <a class="nav-link" href="about.html">Über mich</a>
+                <a class="nav-link pb-0" href="about.html">Über mich</a>
               </li>
               <li class="nav-item ps-2 dropdown d-flex flex-column justify-content-center align-items-center">
-                <a class="nav-link dropdown-toggle active border-bottom" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Galerie </a>
+                <a class="nav-link pb-0 dropdown-toggle active border-bottom" role="button" data-bs-toggle="dropdown" aria-expanded="false"> Galerie </a>
                 <ul class="dropdown-menu position-absolute dropdown-menu-dark">
                   <li>
                     <a class="dropdown-item" href="cities.html">Städte</a>
@@ -45,7 +45,7 @@
                 </ul>
               </li>
               <li class="nav-item px-2">
-                <a class="nav-link" href="contact.html">Kontakt</a>
+                <a class="nav-link pb-0" href="contact.html">Kontakt</a>
               </li>
             </ul>
           </div>
