--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" defer></script>
     <title>Architekturmalerei Weubel</title>
   </head>
-  <body class="bg-dark" style="font-family: 'Quicksand';">
+  <body class="bg-dark text-center text-light" style="font-family: 'Quicksand';">
     <header>
       <div class="d-flex justify-content-center align-items-center flex-column">
         <h1 class="fw-light mt-2 text-light" style="letter-spacing: 0.5vw;">Ulrich Weubel</h1>
@@ -53,6 +53,7 @@
       </nav>
     </header>
     <main>
+      <h1>About me</h1>
     </main>
   </body>
   <footer></footer>
