--- a/about.html
+++ b/about.html
@@ -53,7 +53,22 @@
       </nav>
     </header>
     <main>
-      <h1>About me</h1>
+      <div class="d-flex flex-column-reverse flex-sm-row  justify-content-evenly mt-5">
+        <div style="flex-basis: 50%;">
+          <h3 class="mb-3 fw-light fst-italic">Hi, ich bin Uli Weubel</h3>
+          <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor 
+            invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. 
+            At vero eos et accusam et justo duo dolores et ea rebum. </p>
+          <p>Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
+            Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut 
+            labore et dolore magna aliquyam erat, sed diam voluptua. </p>
+          <p>At vero eos et accusam et justo duo dolores et ea rebum. 
+            Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</p>
+        </div>
+        <div style="flex-basis:10%;">
+          <img class="mb-3" id="about-me-pic" src="images/uli.jpeg" alt="Ulrich Weubel">
+        </div>
+      </div>
     </main>
   </body>
   <footer></footer>
