Add link to header

--- a/about.html
+++ b/about.html
@@ -13,9 +13,10 @@
   </head>
   <body class="bg-dark text-center text-light" style="font-family: 'Quicksand';">
     <header>
-      <div class="d-flex justify-content-center align-items-center flex-column">
+      <div class="d-flex justify-content-center align-items-center flex-column"><a class="text-decoration-none" href="index.html">
         <h1 class="fw-light mt-2 text-light" style="letter-spacing: 0.5vw;">Ulrich Weubel</h1>
         <p class="fw-light text-light" style="letter-spacing: 0.25vw;">Architekturmalerei</p>
+      </a>
       </div>
       <nav class="navbar navbar-expand-lg navbar-dark">
         <div class="container-fluid justify-content-center">
