--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </nav>
     </header>
     <main>
-      <div class="carousel slide" id="home-carousel">
+      <div class="carousel slide" id="home-carousel" data-bs-ride="carousel">
         <div class="carousel-indicators">
             <button type="button" data-bs-target="#home-carousel" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
             <button type="button" data-bs-target="#home-carousel" data-bs-slide-to="1" aria-label="Slide 2"></button>
