--- a/contact.html
+++ b/contact.html
@@ -54,6 +54,34 @@
       </nav>
     </header>
     <main>
+      <h5 class="my-5 fw-light fst-italic">Jetzt Anfrage stellen</h5>
+      <form class="d-flex flex-column align-content-center flex-wrap row-gap-3">
+        <div class="row">
+          <div class="col">
+            <input type="text" class="form-control" placeholder="Vorname"> </div>
+          <div class="col">
+            <input type="text" class="form-control" placeholder="Nachname"> </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <input type="email" class="form-control" placeholder="Email" required> </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <textarea class="form-control" rows="3" placeholder="Bitte beschreiben Sie ihren Auftrag" required></textarea>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <label for="formFile" class="form-label">Bitte laden Sie ein Foto ihres Motivs hoch</label>
+            <input type="file" class="form-control" id="formFile"> </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <button class="btn btn-success mt-4" type="submit">Anfrage abschicken</button>
+          </div>
+        </div>
+      </form>
     </main>
   </body>
   <footer></footer>
